# koekichi

./: .gitignore  BUILD.md  LICENSE  README.md  SPEC.md  pyproject.toml
koekichi/: __init__.py  __main__.py  antihallucination.py  app.py  audio.py  config.py  dictionary.py  formatter.py  hotkey.py  inject.py  llm_format.py  macos_perms.py  macos_tsm.py  paths.py  prompt.py  vad.py
koekichi/engine/: __init__.py  base.py  fw.py  mlx.py
koekichi/ui/: __init__.py  dictionary_editor.py  firstrun.py  overlay.py  settings.py  tray.py
packaging/: BUILD.md  build_mac.sh  build_win.bat  icon.icns  install_gpu_dlls.ps1  koekichi-mac.spec  koekichi-win.spec  koekichi.iss  launch.py  make_dmg.sh  make_icons.py  make_signing_cert.sh
packaging/hooks/: hook-webrtcvad.py
tests/: __init__.py  perf_mic_test.py  test_antihallucination.py  test_audio.py  test_config.py  test_dictionary.py  test_dictionary_editor.py  test_engine_fw.py  test_engine_integration.py  test_firstrun.py  test_formatter.py  test_hotkey.py  test_inject.py  test_llm_guard.py  test_macos_perms.py  test_macos_tsm.py  test_paths.py  test_prompt.py  test_tray.py  test_vad.py
