[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "koekichi"
version = "1.3.1"
description = "Local voice input utility with Whisper"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = {text = "MIT"}
authors = [
    {name = "KoeKichi Contributors"}
]

dependencies = [
    "faster-whisper>=1.0",
    "sounddevice>=0.4.7",
    "webrtcvad-wheels>=0.2.1",
    "numpy>=1.24.0",
    "PySide6>=6.7.0",
    "pynput>=1.7.7",
    "pyperclip>=1.8.2",
    "requests>=2.31.0",
    "mlx-whisper>=0.4.1; sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
# GPU (CUDA) runtime DLLs as pip wheels -- no system CUDA Toolkit install
# needed. Windows + NVIDIA only: `uv sync --extra gpu`
gpu = [
    "nvidia-cublas-cu12; sys_platform == 'win32'",
    "nvidia-cudnn-cu12>=9,<10; sys_platform == 'win32'",
]

[project.scripts]
koekichi = "koekichi.app:main"

[tool.pytest.ini_options]
markers = [
    "integration: integration tests (mac only)",
]

[tool.hatch.envs.default]
features = ["dev"]

[tool.hatch.envs.default.scripts]
test = "pytest {args}"
test-unit = "pytest -m 'not integration' {args}"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pyinstaller>=6.21.0",
]
